syntax = "proto3";

package user;

service UserService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {};
  rpc GetProfile (GetUserRequest) returns (UserResponse) {};
  rpc SaveGame (SaveGameRequest) returns (SaveGameResponse) {};
}

message User {
  int32 id = 1;
  int64 vang = 2;
  int64 sucManh = 3;
  int32 auth_id = 4;
}

message RegisterRequest {
  int32 id = 1;
}

message RegisterResponse {
  bool success = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message UserResponse {
  User user = 1;
}

message SaveGameRequest {
  User user = 1;
}

message SaveGameResponse {
  string message = 1;
}
